<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.TraceDetailsActivity">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/summary_map"
              android:name="com.google.android.libraries.maps.SupportMapFragment"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".activities.TraceDetailsActivity" />

    <com.github.angads25.toggle.widget.LabeledSwitch
        android:id="@+id/map_mode_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginTop="35dp"
        android:textSize="10sp"
        android:layout_gravity="top|right"
        app:on="false"
        app:textOff="@string/map_mode_normal"
        app:textOn="@string/map_mode_satellite"
        app:colorOff="@color/color_white"
        app:colorOn="@color/scape_blue"
        app:colorBorder="@color/scape_blue"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/summary_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/box_margin"
        android:layout_marginEnd="@dimen/box_margin"
        android:layout_marginBottom="@dimen/summary_card_margin_bottom"
        android:layout_gravity="bottom"
        android:background="@color/color_primary"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="@dimen/card_elevation">

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="@dimen/summary_box_padding"
            app:alignmentMode="alignMargins"
            app:columnCount="2"
            app:rowCount="2"
            app:columnOrderPreserved="false">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/summary_icon_size"
                app:layout_columnWeight="1">

                <ImageView
                    android:id="@+id/summary_icon_time"
                    android:layout_width="@dimen/summary_icon_size"
                    android:layout_height="@dimen/summary_icon_size"
                    android:layout_marginEnd="@dimen/trace_details_icon_text_spacing"
                    android:padding="@dimen/summary_icon_padding"
                    android:src="@drawable/time" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="@dimen/trace_details_box_item_margin_top_bottom"
                    android:layout_toEndOf="@id/summary_icon_time"
                    android:text="@string/time"
                    android:textColor="@color/text_color_black" />

                <TextView
                    android:id="@+id/summary_measured_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="@dimen/trace_details_box_item_margin_top_bottom"
                    android:layout_toEndOf="@id/summary_icon_time"
                    android:textColor="@color/text_color_black_light" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/summary_icon_size"
                app:layout_columnWeight="1">

                <ImageView
                    android:id="@+id/summary_icon_distance"
                    android:layout_width="@dimen/summary_icon_size"
                    android:layout_height="@dimen/summary_icon_size"
                    android:layout_marginEnd="@dimen/trace_details_icon_text_spacing"
                    android:padding="@dimen/summary_icon_padding"
                    android:src="@drawable/distance" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="@dimen/trace_details_box_item_margin_top_bottom"
                    android:layout_toEndOf="@id/summary_icon_distance"
                    android:text="@string/distance"
                    android:textColor="@color/text_color_black" />

                <TextView
                    android:id="@+id/summary_measured_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="@dimen/trace_details_box_item_margin_top_bottom"
                    android:layout_toEndOf="@id/summary_icon_distance"
                    android:textColor="@color/text_color_black_light" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/summary_icon_size"
                app:layout_columnWeight="1">

                <ImageView
                    android:id="@+id/summary_icon_speed"
                    android:layout_width="@dimen/summary_icon_size"
                    android:layout_height="@dimen/summary_icon_size"
                    android:layout_marginEnd="@dimen/trace_details_icon_text_spacing"
                    android:padding="@dimen/summary_icon_padding"
                    android:src="@drawable/speed" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="@dimen/trace_details_box_item_margin_top_bottom"
                    android:layout_toEndOf="@id/summary_icon_speed"
                    android:text="@string/speed"
                    android:textColor="@color/text_color_black" />

                <TextView
                    android:id="@+id/summary_measured_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="@dimen/trace_details_box_item_margin_top_bottom"
                    android:layout_toEndOf="@id/summary_icon_speed"
                    android:textColor="@color/text_color_black_light" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/summary_icon_size"
                app:layout_columnWeight="1">

                <ImageView
                    android:id="@+id/summary_icon_pace"
                    android:layout_width="@dimen/summary_icon_size"
                    android:layout_height="@dimen/summary_icon_size"
                    android:layout_marginEnd="@dimen/trace_details_icon_text_spacing"
                    android:padding="@dimen/summary_icon_padding"
                    android:src="@drawable/pace" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="@dimen/trace_details_box_item_margin_top_bottom"
                    android:layout_toEndOf="@id/summary_icon_pace"
                    android:text="@string/pace"
                    android:textColor="@color/text_color_black" />

                <TextView
                    android:id="@+id/summary_measured_pace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="@dimen/trace_details_box_item_margin_top_bottom"
                    android:layout_toEndOf="@id/summary_icon_pace"
                    android:textColor="@color/text_color_black_light" />
            </RelativeLayout>

        </androidx.gridlayout.widget.GridLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>